# ried

./: .gitignore  main.py  pyproject.toml  setup.py
ried/bar/: bar_generator.py
ried/beat/: beat_generator.py
ried/chord/: chord_generator.py
ried/interval/: interval_analysis.py  interval_generator.py  interval_identifier.py
ried/notation/: notation_analyzer.py
ried/note/: note_generator.py
ried/root/: root_analysis.py
ried/scale/: possible_modes.py  scale_analysis.py  scale_generator.py  scale_range.py
test/: mkCSV.py  test_Note.py  test_analyze_mode.csv  test_analyze_root.csv  test_diatonic_endpoint.csv  test_fix_octave.csv  test_gen_interval.py  test_get_endpoint.csv  test_get_major_scale_with_dots.csv  test_get_major_scale_without_dots.csv  test_get_parts_int.csv  test_get_parts_string.csv  test_get_property_scale.csv  test_scale_from_list.csv
test/bar/: origen.csv  origen2.csv  origen3.csv  test_bar.py
test/notation/: test_notation_analayzer_Chord.py  test_notation_analayzer_Note.py
test/note/add/: mk_csv.py  origen.csv  test_add.py
test/note/alter/: mk_csv.py  origen.csv  test_alter.py
test/note/comparison/: origen.csv  test_comparison.py
test/note/full_name/: mk_csv.py  origen.csv  test_full_name.py
test/note/midi_number/: mk_csv.py  origen.csv  test_midi_number.py
test/note/name/: mk_csv.py  origen.csv  test_name.py
test/note/name_without_alter/: mk_csv.py  origen.csv  test_name_without_alter.py
test/note/octave/: mk_csv.py  origen.csv  test_octave.py
test/note/pitch_index/: mk_csv.py  origen.csv  test_pitch_index.py
(+12 files in other folders)
